# azure-policy-drift-detector

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_FEATURES.md  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  policy-check-template.yml  release.yml
crates/apdd-azure/: Cargo.toml
crates/apdd-azure/src/: auth.rs  lib.rs  policy_insights.rs  resource_graph.rs
crates/apdd-cli/: Cargo.toml
crates/apdd-cli/src/: main.rs
crates/apdd-core/: Cargo.toml
crates/apdd-core/src/: analyzer.rs  models.rs  report.rs
crates/apdd-core/tests/: drift_detection_integration.rs
docs/: architecture.md  azure_setup.md
examples/: export_report.rs  scan_subscription.rs
reports/: sample_report.json  sample_report.md
scripts/: export_report.sh  setup.sh
