[package]
name = "apdd-azure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
apdd-core = { path = "../apdd-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
