[package]
name = "apdd-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "apdd"
path = "src/main.rs"

[dependencies]
apdd-core = { path = "../apdd-core" }
apdd-azure = { path = "../apdd-azure" }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tabled = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
